# pacuman

./: CMakeLists.txt  Makefile.win  PacMan.dev  PacMan.layout  README.md  global.c  global.h  graphics.c  graphics.h  mpinclude.h  pmLaucher.c  pmLaucher.h  pmanima.c  pmanima.h  pmdirrt.c  pmdirrt.h  pmeditor.c  pmeditor.h  pmerr.c  pmerr.h  pmgame.c  pmgame.h  pmhelp.c  pmhelp.h  pmminit.c  pmminit.h  pmrank.c  pmrank.h  pmrun.c  pmrun.h  pmsp.c  pmsp.h
PrograminCReport/: sc.tex
demo/: Makefile  lv2.pmm  lv3.pmm  lv4.pmm  lv5.pmm  lv6.pmm  lv7.pmm
lib/: CMakeLists.txt  pmsp.c
map/: lv1.pmm
sourcecode/: pmanima.c  pmdirrt.c  pmerr.c  pmgame.c  pmminit.c  pmrank.c  pmrun.c  pmsp.c
sourcecode/head/: pmanima.h  pmrank.h  pmrun.h
